# migration_pattern

./: README.md  columns_mapping.csv  extract_sav.ipynb  hello.py  pyproject.toml
men_and_womens_mobility_data/: fg.sav
