[project]
name = "migration-pattern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyreadstat>=1.3.1",
    "seaborn>=0.13.2",
]
